tests/kubernetes/custom-5.6.5/compliant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: compliant-ns
  annotations:
    private-endpoint: "enabled"
