tests/kubernetes/custom-5.6.5/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-5.6.5-compliant
policies:
  - ../../../../policies/kubernetes/pod-security/custom-5.6.5.yaml
resources:
  - namespace.yaml
results:
  - policy: custom-5.6.5
    rule: check-private-endpoint-namespace
    resources:
      - compliant-ns
    kind: Namespace
    result: pass
